# t0-2

./: .gitignore  README.md  pyproject.toml
notebooks/: co2_joules_conversion.ipynb  compute_energy_consumption_linux.ipynb  compute_energy_consumption_mac.ipynb  energy_calculation_111.ipynb  test_energy_consumption.ipynb
